--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
 
                     <td class="col-2">{{data.e}}</td>
                     <td class="col-2">61 - 63</td>
-                    <td class="col-2">{{data.l}}</td>
+                    <td class="col-2">581</td>
                     <td class="col-5">
                         <app-stock-graph ></app-stock-graph>                           
                     </td>
