--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,10 +5,10 @@
             <thead>
                 <tr class="d-flex">
                     <th class="col-1"></th>
-                    <th class="col-2">Stocks</th>
-                    <th class="col-2">Start</th>
-                    <th class="col-2">Data Points</th>
-                    <th class="col-5">Graph</th>
+                    <th class="col-3">Stocks</th>
+                    <th class="col-5">Start</th>
+                    <th class="col-3">Data Points</th>
+                    <!-- <th class="col-5">Graph</th> -->
                 </tr>
             </thead>
             <tbody>
@@ -18,12 +18,12 @@
                         <label class="custom-control-label" for="customCheck1"></label>
                     </td>
 
-                    <td class="col-2">{{data.e}}</td>
-                    <td class="col-2">61 - 63 </td>
-                    <td class="col-2">581 </td>
-                    <td class="col-5">
+                    <td class="col-3">{{data.e}}</td>
+                    <td class="col-5">61 - 63 </td>
+                    <td class="col-3">581 </td>
+                    <!-- <td class="col-5">
                         <app-stock-graph ></app-stock-graph>                           
-                    </td>
+                    </td> -->
 
                 </tr>
                 <tr class="d-flex">
